kubernetes/base/beekeeper-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: beekeeper-api
  name: beekeeper-api
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: beekeeper-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: beekeeper-api
    spec:
      containers:
      - image: waggle/beekeeper-api:latest
        name: beekeeper-api
        volumeMounts:
          - name: ca-secret
            mountPath: "/usr/lib/waggle/certca/"
            readOnly: true

        ports:
          - name: api
            containerPort: 5000

      volumes:
      - name: ca-secret
        secret:
          secretName: beekeeper-sshd-ca-secret
          defaultMode: 0400

      restartPolicy: Always
