kubernetes/base/beekeeper-sshd.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: beekeeper-sshd
  name: beekeeper-sshd
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: beekeeper-sshd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: beekeeper-sshd
    spec:
      containers:
      - image: waggle/beekeeper-sshd:latest
        name: beekeeper-sshd
        volumeMounts:
          - name: ca-secret
            mountPath: "/usr/lib/waggle/certca/"
            readOnly: true
          - name: server-secret
            mountPath: "/usr/lib/waggle/bk-server/"
            #mountPath: "/usr/lib/waggle/bk-server/"
            readOnly: true

          - name: public-registration-keys
            mountPath: "/usr/lib/waggle/registration_keys/"
            readOnly: true

          - name: sshd-config
            mountPath: "/config"
            readOnly: true
          - name: authorized-keys
            mountPath: /root/.ssh/authorized_keys
            subPath: admin.pem.pub
            readOnly: true
        ports:
          - name: api
            containerPort: 80
          - name: ssh
            containerPort: 22

      restartPolicy: Always
      volumes:
      - name: public-registration-keys
        secret:
          secretName: beekeeper-sshd-public-registration-keys
      - name: sshd-config
        configMap:
          name: beekeeper-sshd-config
      - name: authorized-keys
        configMap:
          defaultMode: 0400
          name: beekeeper-sshd-authorized-keys-config


      - name: server-secret
        secret:
          secretName: beekeeper-sshd-server-secret
          defaultMode: 0400
      - name: ca-secret
        secret:
          secretName: beekeeper-sshd-ca-secret
          defaultMode: 0400
          items:
          - key: beekeeper_ca_key.pub
            path: beekeeper_ca_key.pub
