kubernetes/base/beekeeper-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-api
  labels:
    app: beekeeper-api
spec:
  selector:
    k8s-app: beekeeper-api
  type: ClusterIP
  ports:
  - name: beekeeper-api
    port: 5000
    protocol: TCP
    targetPort: 5000
