kubernetes/base/beekeeper-sshd.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-sshd-api
  labels:
    app: beekeeper-sshd-api
spec:
  selector:
    k8s-app: beekeeper-sshd
  type: ClusterIP
  ports:
  - name: api
    port: 80
    protocol: TCP
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-sshd-ssh
  labels:
    app: beekeeper-sshd-ssh
spec:
  selector:
    k8s-app: beekeeper-sshd
  type: LoadBalancer
  ports:
  - name: ssh
    port: 49190
    protocol: TCP
    targetPort: 22
