kubernetes/base/beekeeper-sshd.yaml
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-sshd-api
  labels:
    app: beekeeper-sshd-api
spec:
  selector:
    k8s-app: beekeeper-sshd
  type: ClusterIP
  ports:
    - name: api
      port: 80
      protocol: TCP
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-sshd-ssh
  labels:
    app: beekeeper-sshd-ssh
spec:
  selector:
    k8s-app: beekeeper-sshd
  type: LoadBalancer
  ports:
    - name: ssh
      port: 49190
      protocol: TCP
      targetPort: 22
---
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-sshd-adminssh
  labels:
    app: beekeeper-sshd-adminssh
spec:
  selector:
    k8s-app: beekeeper-sshd
  type: ClusterIP
  ports:
    - name: adminssh
      port: 2201
      protocol: TCP
      targetPort: 2201
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: beekeeper-sshd-pvc
#spec:
#  #storageClassName: manual
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 50Mi
#hostPath:
#  path: "/mnt/data"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: beekeeper-sshd
  name: beekeeper-sshd
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: beekeeper-sshd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: beekeeper-sshd
    spec:
      containers:
        - image: waggle/beekeeper-sshd:latest
          name: beekeeper-sshd
          resources:
            limits:
              cpu: "8000m"
              memory: "12Gi"
            requests:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - name: ca-secret
              mountPath: "/usr/lib/waggle/certca/"
              readOnly: true
            - name: server-secret
              mountPath: "/usr/lib/waggle/bk-server/"
              #mountPath: "/usr/lib/waggle/bk-server/"
              readOnly: true

            - name: public-registration-keys
              mountPath: "/usr/lib/waggle/registration_keys/"
              readOnly: true

            - name: sshd-config
              mountPath: "/config"
              readOnly: true
            - name: authorized-keys
              mountPath: /root/.ssh/authorized_keys
              subPath: admin.pem.pub
              readOnly: true
            - name: waggle-authorized-keys
              mountPath: /home/waggle/ssh-template/authorized_keys
              subPath: authorized_keys
              readOnly: false
            - name: optional-init-script
              mountPath: /entrypoint-config/run.sh
              subPath: run.sh

          ports:
            - name: api
              containerPort: 80
            - name: ssh
              containerPort: 22

      restartPolicy: Always
      volumes:
        - name: public-registration-keys
          secret:
            secretName: beekeeper-sshd-public-registration-keys
        - name: sshd-config
          configMap:
            name: beekeeper-sshd-config
        - name: authorized-keys
          secret:
            defaultMode: 0400
            secretName: beekeeper-sshd-authorized-keys-secret

        - name: server-secret
          secret:
            secretName: beekeeper-sshd-server-secret
            defaultMode: 0400

        - name: ca-secret
          secret:
            secretName: beekeeper-sshd-ca-secret
            defaultMode: 0400
            items:
              - key: beekeeper_ca_key.pub
                path: beekeeper_ca_key.pub

        - name: waggle-authorized-keys
          configMap:
            name: waggle-authorized-keys
            optional: true
            defaultMode: 0600

        - name: optional-init-script
          configMap:
            name: beekeeper-sshd-init-script
            optional: true
            defaultMode: 0700
