kubernetes/base/beekeeper-api.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beekeeper-api
  #annotations:
    #kubernetes.io/ingress.class: traefik
    #traefik.ingress.kubernetes.io/rewrite-target: /state
spec:
  rules:
  #- host: <use overlay to defined this>
  - http:
      paths:
      - path: /api/state
        pathType: Prefix
        backend:
          service:
            name: beekeeper-api
            port:
              number: 5000
