kubernetes/base/beekeeper-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beekeeper-api
  #annotations:
    #kubernetes.io/ingress.class: traefik
    #traefik.ingress.kubernetes.io/rewrite-target: /state
spec:
  rules:
  #- host: <use overlay to defined this>
  - http:
      paths:
      - path: /api/state
        pathType: Prefix
        backend:
          service:
            name: beekeeper-api
            port:
              number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: beekeeper-api
  labels:
    app: beekeeper-api
spec:
  selector:
    k8s-app: beekeeper-api
  type: ClusterIP
  ports:
  - name: beekeeper-api
    port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: beekeeper-api
  name: beekeeper-api
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: beekeeper-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: beekeeper-api
    spec:
      containers:
      - name: deploy-manager
        image: waggle/beekeeper-deploy-manager
        resources:
          limits:
            cpu: 2
            memory: "1Gi"
      - name: beekeeper-api
        image: waggle/beekeeper-api:latest
        volumeMounts:
          - name: ca-secret
            mountPath: "/usr/lib/waggle/certca/"
            readOnly: true
          - name: nodes-secret
            mountPath: "/config/nodes/nodes.pem"
            subPath: nodes.pem
            readOnly: true
          - name: admin-key
            mountPath: /config/admin-key/admin.pem
            subPath: admin.pem
            readOnly: true
        resources:
          limits:
            cpu: 4
            memory: "1Gi"
        ports:
          - name: api
            containerPort: 5000

      volumes:
      - name: ca-secret
        secret:
          secretName: beekeeper-sshd-ca-secret
          defaultMode: 0400
      - name: nodes-secret
        secret:
          secretName: beekeeper-api-nodes-secret
          defaultMode: 0400
      - name: admin-key
        secret:
          defaultMode: 0400
          secretName: beekeeper-sshd-authorized-keys-secret

      restartPolicy: Always
